# expenseops-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README.txt  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260523_0001_initial_schema.py  20260526_0002_plaid_webhook_events.py  (+1 more)
app/: __init__.py  auth.py  config.py  db.py  logging_config.py  main.py  models.py  schemas.py  security.py
app/api/: deps.py  (+5 more)
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
sandbox/: .gitignore  README.md  __init__.py  test_sandbox_lab.py
tests/: test_agent_service.py  test_ai_chat_context_service.py  test_ai_intent_extraction_service.py  test_ai_memory_service.py  test_ai_prompt_guardrails.py  test_auth.py  test_config.py  test_conversational_split_parser.py  test_custom_split_parser.py  test_custom_split_routes.py  test_deployment_packaging.py  test_entity_resolution_service.py  test_llm_ai_chat_parser.py  test_llm_conversation_parser.py  test_llm_split_parser.py  test_logging_config.py  test_plaid_routes.py  test_plaid_service.py  test_recommendation_service.py  test_share_calculator.py  test_splitwise_oauth1.py  test_splitwise_response_guard.py  test_splitwise_routes.py  test_telegram_routes.py  test_telegram_service.py  test_telegram_session_store.py  test_telegram_state_service.py  test_transaction_service.py
(+78 files in other folders)
