[project]
name = "expenseops-agent"
version = "0.1.0"
description = "Personal agent that ingests Plaid credit-card transactions and creates approved Splitwise expenses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "plaid-python>=26.0.0",
    "cryptography>=42.0.0",
    "requests-oauthlib>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "certifi>=2024.7.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
